--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Gerador de Frases Aleatórias</title>
+    <title>Gerador de Frases Natalinas - Espalhando Alegria e Esperança</title>
 </head>
 <body>
     <div class="container">
+        <h1>Natal: Espalhando Alegria e Esperança</h1>
         <button onclick="gerarFrase()">Gerar Frase</button>
         <p id="fraseGerada"></p>
     </div>
