--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Natal: Espalhando Alegria e Esperança</h1>
+        <h1>Espalhando Alegria e Esperança</h1>
         <button onclick="gerarFrase()">Gerar Frase</button>
         <p id="fraseGerada"></p>
     </div>
