--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <h1>Espalhando Alegria e Esperança</h1>
-        <button onclick="gerarFrase()">Gerar Frase</button>
         <p id="fraseGerada"></p>
+        <button onclick="gerarFrase()">Gerar Frase Natalina</button>
     </div>
     <script src="script.js"></script>
 </body>
