--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Espalhando Alegria e Esperança</h1>
         <p id="fraseGerada"></p>
-        <button onclick="gerarFrase()">Gerar Frase Natalina</button>
+        <button id="botaoGerar" onclick="gerarFrase()">Gerar Frase Natalina</button>
     </div>
     <script src="script.js"></script>
 </body>
