--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Gerador de Frases Natalinas - Espalhando Alegria e Esperança</title>
+    <title>Gerador de Frases Natalinas</title>
 </head>
 <body>
     <div class="container">
