--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p id="fraseGerada"></p>
         <button id="botaoGerar" onclick="gerarFrase()">Gerar Frase Natalina</button>
     </div>
+    <div id="fogosContainer"></div>
     <script src="script.js"></script>
 </body>
 </html>
