--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Gerador de Frases Natalinas</title>
+    <style>
+        #botaoGerar {
+            font-size: 1.5em; /* Defina o tamanho da fonte do botão conforme necessário */
+            padding: 10px 20px; /* Ajuste o preenchimento (padding) conforme necessário */
+        }
+    </style>
 </head>
 <body>
     <div class="container">
