--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Espalhando Alegria e Esperança</h1>
+        <h1>Faça seu pedido e leia sua afirmação</h1>
         <p id="fraseGerada"></p>
         <button id="botaoGerar" onclick="gerarFrase()">Gerar Frase Natalina</button>
     </div>
