--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Faça seu pedido e leia sua afirmação</h1>
         <p id="fraseGerada"></p>
-        <button id="botaoGerar" onclick="gerarFrase()">Gerar Frase Natalina</button>
+        <button id="botaoGerar" onclick="gerarFrase()">CLIQUE AQUI PARA GERAR SUA FRASE</button>
     </div>
     <div id="fogosContainer"></div>
     <script src="script.js"></script>
