--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
         <h1>Faça seu pedido e leia sua afirmação</h1>
-        <p id="fraseGerada"></p>
+        <div id="fraseContainer">
+            <p id="fraseGerada"></p>
+        </div>
         <button id="botaoGerar" onclick="gerarFrase()">CLIQUE AQUI PARA GERAR SUA FRASE</button>
     </div>
     <div id="fogosContainer"></div>
